--- a/src/page-voice.html
+++ b/src/page-voice.html
@@ -220,208 +220,210 @@
   </header>
   <main>
     <!-- 下層メインビュー -->
-  <div class="sub-mv" id="js-mv">
-    <div class="sub-mv__inner">
-      <div class="sub-mv__image">
-        <picture>
-          <source srcset="./assets/images/common/voice_mv.jpg" media="(min-width: 768px)">
-          <img src="./assets/images/common/voice_mv_sp.jpg" alt="スキューバダイビング" decoding="async">
-        </picture>
-      </div>
-      <div class="sub-mv__title">
-        <h1 class="sub-mv__section-header">Voice</h1>
-      </div>
-    </div>
-   </div>
-   <!-- パンくず -->
-   <div class="page-bredcrumb bredcrumb">
-    <div class="bredcrumb__inner inner">
-      <div class="bredcrumb__text">パンくずリスト</div>
-    </div>
-  </div>
-  <!-- 下層ボイス -->
-   <section class="layout-voice page-voice">
-    <div class="page-voice__inner inner">
-      <div class="page-voice__category category">
-        <div class="category__items">
-          <a href="#" class="category__item">
-            <p class="category__item-text">ALL</p>
-          </a>
-          <a href="#" class="category__item">
-            <p class="category__item-text">ライセンス講習</p>
-          </a>
-          <a href="#" class="category__item">
-            <p class="category__item-text">ファンダイビング</p>
-          </a>
-          <a href="#" class="category__item">
-            <p class="category__item-text">体験ダイビング</p>
-          </a>
+    <div class="sub-mv" id="js-mv">
+      <div class="sub-mv__inner">
+        <div class="sub-mv__image">
+          <picture>
+            <source srcset="./assets/images/common/voice_mv.jpg" media="(min-width: 768px)">
+            <img src="./assets/images/common/voice_mv_sp.jpg" alt="スキューバダイビング" decoding="async">
+          </picture>
         </div>
-     </div>
-     <div class="page-voice__contents">
-        <div class="page-voice-cards">
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">20代(女性)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">ライセンス講習</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/voice_img_1.jpg" alt="麦わら帽子を被った笑顔の女性" decoding="async"
-                      loading="lazy" width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">20代(男性)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">ファンダイビング</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/voice_img_2.jpg" alt="親指を立てた男性" decoding="async" loading="lazy"
-                      width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">30代(女性)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">体験ダイビング</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/age_voice_img1.jpg" alt="笑顔の二人の女性" decoding="async" loading="lazy"
-                      width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">20代(女性)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">体験ダイビング</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/age_voice_img2.jpg" alt="髪が風でなびいてる笑顔の女性" decoding="async" loading="lazy"
-                      width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">30代(カップル)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">ファンダイビング</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/age_voice_img3.jpg" alt="腕を組んだ笑顔のカップル" decoding="async" loading="lazy"
-                      width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-          <div class="page-voice-cards__item voice-card">
-            <div class="voice-card__body">
-              <div class="voice-card__container">
-                <div class="voice-card__wrap">
-                  <div class="voice-card__group">
-                    <div class="voice-card__info">20代(女性)</div>
-                    <div class="voice-card__category">
-                      <div class="voice-card__label">ライセンス講習</div>
-                    </div>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
-                <div class="voice-card__image">
-                  <div class="voice-card__img colorbox">
-                    <img src="./assets/images/common/age_voice_img4.jpg" alt="お団子ヘアーの女性" decoding="async" loading="lazy"
-                      width="360" height="280">
-                  </div>
-                </div>
-              </div>
-              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
+        <div class="sub-mv__title">
+          <h1 class="sub-mv__section-header">Voice</h1>
         </div>
-     </div>
-     <!-- ページナビ -->
-     <div class="page-voice__pagenavi pagenavi">
-      <div class="wp-pagenavi">
-      <a class="previouspostslink" rel="prev" href="#"></a>
-      <span class="current">1</span>
-      <a class="page smaller" href="#">2</a>
-      <a class="page smaller" href="#">3</a>
-      <a class="page larger" href="#">4</a>
-      <a class="page larger" href="#">5</a>
-      <a class="page larger" href="#">6</a>
-      <a class="nextpostslink" rel="next" href="#"></a>
       </div>
     </div>
-    </div>
-   </section>
 
+    <!-- パンくず -->
+    <div class="page-bredcrumb bredcrumb">
+      <div class="bredcrumb__inner inner">
+        <div class="bredcrumb__text">パンくずリスト</div>
+      </div>
+    </div>
+
+    <!-- 下層ボイス -->
+    <section class="layout-voice page-voice">
+      <div class="page-voice__inner inner">
+        <div class="page-voice__category category">
+          <div class="category__items">
+            <a href="#" class="category__item">
+              <p class="category__item-text">ALL</p>
+            </a>
+            <a href="#" class="category__item">
+              <p class="category__item-text">ライセンス講習</p>
+            </a>
+            <a href="#" class="category__item">
+              <p class="category__item-text">ファンダイビング</p>
+            </a>
+            <a href="#" class="category__item">
+              <p class="category__item-text">体験ダイビング</p>
+            </a>
+          </div>
+        </div>
+        <div class="page-voice__contents">
+          <div class="page-voice-cards">
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">20代(女性)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">ライセンス講習</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/voice_img_1.jpg" alt="麦わら帽子を被った笑顔の女性" decoding="async"
+                        loading="lazy" width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">20代(男性)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">ファンダイビング</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/voice_img_2.jpg" alt="親指を立てた男性" decoding="async" loading="lazy"
+                        width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">30代(女性)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">体験ダイビング</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/age_voice_img1.jpg" alt="笑顔の二人の女性" decoding="async"
+                        loading="lazy" width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">20代(女性)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">体験ダイビング</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/age_voice_img2.jpg" alt="髪が風でなびいてる笑顔の女性" decoding="async"
+                        loading="lazy" width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">30代(カップル)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">ファンダイビング</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/age_voice_img3.jpg" alt="腕を組んだ笑顔のカップル" decoding="async"
+                        loading="lazy" width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+            <div class="page-voice-cards__item voice-card">
+              <div class="voice-card__body">
+                <div class="voice-card__container">
+                  <div class="voice-card__wrap">
+                    <div class="voice-card__group">
+                      <div class="voice-card__info">20代(女性)</div>
+                      <div class="voice-card__category">
+                        <div class="voice-card__label">ライセンス講習</div>
+                      </div>
+                    </div>
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                  <div class="voice-card__image">
+                    <div class="voice-card__img colorbox">
+                      <img src="./assets/images/common/age_voice_img4.jpg" alt="お団子ヘアーの女性" decoding="async"
+                        loading="lazy" width="360" height="280">
+                    </div>
+                  </div>
+                </div>
+                <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ページナビ -->
+        <div class="page-voice__pagenavi pagenavi">
+          <div class="wp-pagenavi">
+            <a class="previouspostslink" rel="prev" href="#"></a>
+            <span class="current">1</span>
+            <a class="page smaller" href="#">2</a>
+            <a class="page smaller" href="#">3</a>
+            <a class="page larger" href="#">4</a>
+            <a class="page larger" href="#">5</a>
+            <a class="page larger" href="#">6</a>
+            <a class="nextpostslink" rel="next" href="#"></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Contact -->
     <section class="layout-contact contact">
@@ -463,6 +465,7 @@
       </div>
     </section>
   </main>
+
   <!--フッター-->
   <footer class="layout-footer footer">
     <div class="fooer__inner inner">
