--- a/src/single-blog.html
+++ b/src/single-blog.html
@@ -218,6 +218,7 @@
       </nav>
     </div>
   </header>
+
   <main>
     <!-- 下層メインビュー -->
     <div class="sub-mv" id="js-mv">
@@ -233,12 +234,14 @@
         </div>
       </div>
     </div>
+
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <div class="bredcrumb__text">パンくずリスト</div>
       </div>
     </div>
+
     <!-- 下層 Blog -->
     <section class="layout-single-blog single-blog">
       <div class="single-blog__inner inner">
@@ -251,29 +254,36 @@
                 <div class="single-blog__item">
                   <div class="single-blog__image">
                     <img src="./assets/images/common/single-blog_img.jpg" alt="ピンクの珊瑚礁" decoding="async" loading="lazy"
-                    width="1400" height="936">
+                      width="1400" height="936">
                   </div>
                   <div class="single-blog__content">
-                    <p class="single-blog__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                    <p class="single-blog__text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    </p>
                   </div>
                 </div>
                 <div class="single-blog__item">
                   <div class="single-blog__image">
                     <img src="./assets/images/common/single-blog_img.jpg" alt="ピンクの珊瑚礁" decoding="async" loading="lazy"
-                    width="1400" height="936">
+                      width="1400" height="936">
                   </div>
                   <div class="single-blog__content">
-                    <p class="single-blog__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                    <p class="single-blog__text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    </p>
                     <div class="single-blog__lists">
-                    <p class="single-blog__list">リスト１</p>
-                    <p class="single-blog__list">リスト2</p>
-                    <p class="single-blog__list">リスト3</p>
+                      <p class="single-blog__list">リスト１</p>
+                      <p class="single-blog__list">リスト2</p>
+                      <p class="single-blog__list">リスト3</p>
+                    </div>
+                    <p class="single-blog__text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    </p>
                   </div>
-                  <p class="single-blog__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-                </div>
                 </div>
               </div>
             </div>
+
             <!-- ページナビ -->
             <div class="single-blog__pagenavi pagenavi">
               <div class="wp-pagenavi wp-pagenavi--gap">
@@ -282,7 +292,8 @@
               </div>
             </div>
           </div>
-          <!-- sidebar -->
+
+          <!-- サイドバー -->
           <div class="single-blog__sidebar sidebar">
             <div class="sidebar__items sidebar__items--inner">
               <div class="sidebar__item">
@@ -327,14 +338,14 @@
                     <img src="./assets/images/common/review_img1.jpg" alt="カップル" decoding="async" loading="lazy"
                       width="588" height="436">
                   </div>
-                    <div class="sidebar__review-textbox">
-                      <div class="sidebar__review-age">30代(カップル)</div>
-                      <div class="sidebar__review-text">ここにタイトルが入ります。ここにタイトル</div>
-                    </div>
-                    <div class="sidebar__btn">
-                      <a href="#" class="button slide"><span>View more</span></a>
-                    </div>
+                  <div class="sidebar__review-textbox">
+                    <div class="sidebar__review-age">30代(カップル)</div>
+                    <div class="sidebar__review-text">ここにタイトルが入ります。ここにタイトル</div>
                   </div>
+                  <div class="sidebar__btn">
+                    <a href="#" class="button slide"><span>View more</span></a>
+                  </div>
+                </div>
               </div>
               <div class="sidebar__item">
                 <div class="sidebar__title">キャンペーン</div>
@@ -402,7 +413,7 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
     </section>
 
     <!-- Contact -->
@@ -445,6 +456,7 @@
       </div>
     </section>
   </main>
+
   <!--フッター-->
   <footer class="layout-footer footer">
     <div class="fooer__inner inner">
