--- a/src/index.html
+++ b/src/index.html
@@ -117,13 +117,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス取得</a>
+                            <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">貸切体験ダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ナイトダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -142,13 +142,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-information.html#tab__content01">ライセンス講習</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-information.html#tab__content02">体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-information.html#tab__content03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -176,13 +176,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-price.html#page-price__group01">ライセンス講習</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-price.html#page-price__group02">体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-price.html#page-price__group03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -365,7 +365,7 @@
           </div>
         </div>
         <div class="campaign__btn">
-          <a href="#" class="button slide"><span>View more</span></a>
+          <a href="page-campaign.html" class="button slide"><span>View more</span></a>
         </div>
       </div>
     </section>
@@ -400,7 +400,7 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト<span
                   class="about__sp-visibility">が入ります。</span></p>
               <div class="about__btn">
-                <a href="#" class="button slide"><span>View&nbsp;more</span></a>
+                <a href="page-about.html" class="button slide"><span>View&nbsp;more</span></a>
               </div>
             </div>
           </div>
@@ -427,7 +427,7 @@
             <div class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br>
               正規登録店として、初めての方でも安心安全にライセンス取得をサポート致します。</div>
             <div class="information__btn">
-              <a href="#" class="button slide"><span>View&nbsp;more</span></a>
+              <a href="page-information.html" class="button slide"><span>View&nbsp;more</span></a>
             </div>
           </div>
         </div>
@@ -484,7 +484,7 @@
           </div>
         </div>
         <div class="blog__btn">
-          <a href="#" class="button slide"><span>View&nbsp;more</span></a>
+          <a href="page-blog.html" class="button slide"><span>View&nbsp;more</span></a>
         </div>
       </div>
     </section>
@@ -551,7 +551,7 @@
           </div>
         </div>
         <div class="voice__btn">
-          <a href="#" class="button slide"><span>View&nbsp;more</span></a>
+          <a href="page-voice.html" class="button slide"><span>View&nbsp;more</span></a>
         </div>
       </div>
     </section>
@@ -641,7 +641,7 @@
           </div>
         </div>
         <div class="price__btn">
-          <a href="#" class="button slide"><span>View&nbsp;more</span></a>
+          <a href="page-price.html" class="button slide"><span>View&nbsp;more</span></a>
         </div>
       </div>
     </section>
@@ -679,7 +679,7 @@
             </div>
             <div class="contact__column-text">ご予約・お問い合わせはコチラ</div>
             <div class="contact__column-btn">
-              <a href="#" class="button slide"><span>Contact us</span></a>
+              <a href="page-contact.html" class="button slide"><span>Contact us</span></a>
             </div>
           </div>
         </div>
@@ -691,7 +691,7 @@
     <div class="fooer__inner inner">
       <div class="footer__wrapper">
         <div class="footer__container">
-          <a href="#" class="footer__logo-link">
+          <a href="index.html" class="footer__logo-link">
             <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
           </a>
           <div class="footer__icon-list">
@@ -711,50 +711,50 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">キャンペーン</a>
+                        <a href="page-campaign.html">キャンペーン</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス取得</a>
+                            <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">貸切体験ダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ナイトダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                           </li>
                         </ul>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">私たちについて</a>
+                        <a href="page-about.html">私たちについて</a>
                       </li>
                     </ul>
                   </div>
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">ダイビング情報</a>
+                        <a href="page-information.html">ダイビング情報</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-information.html#tab__content01">ライセンス講習</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-information.html#tab__content02">体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-information.html#tab__content03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">ブログ</a>
+                        <a href="page-blog.html">ブログ</a>
                       </li>
                     </ul>
                   </div>
@@ -765,23 +765,23 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">お客様の声</a>
+                        <a href="page-voice.html">お客様の声</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">料金一覧</a>
+                        <a href="page-price.html">料金一覧</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-price.html#page-price__group01">ライセンス講習</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-price.html#page-price__group02">体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-price.html#page-price__group03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -790,22 +790,22 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">よくある質問</a>
+                        <a href="page-faq.html">よくある質問</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">利用規約</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">お問い合わせ</a>
+                        <a href="page-contact.html">お問い合わせ</a>
                       </li>
                     </ul>
                   </div>
