--- a/src/page-information.html
+++ b/src/page-information.html
@@ -219,6 +219,7 @@
     </div>
   </header>
   <main>
+
     <!-- 下層メインビュー -->
     <div class="sub-mv" id="js-mv">
       <div class="sub-mv__inner">
@@ -233,72 +234,74 @@
         </div>
       </div>
     </div>
+
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <div class="bredcrumb__text">パンくずリスト</div>
       </div>
     </div>
-    <!-- 下層 Information -->
-   <section class="layout-information page-information">
-    <div class="page-information__inner inner">
-      <div class="page-information__tab tab">
-        <div class="tab__list">
-          <button class="tab__button tab__button--whale js-tab-button is-active">ライセンス<br class="u-mobile">講習</button>
-          <button class="tab__button tab__button--shark js-tab-button">ファン<br class="u-mobile">ダイビング</button>
-          <button class="tab__button tab__button--small-fish js-tab-button">体験<br class="u-mobile">ダイビング</button>
-        </div>
 
-        <div class="tab__contents">
-          <div class="tab__content js-tab-content is-active">
-            <div class="tab__text-block">
-              <h2 class="tab__title">ライセンス講習</h2>
-              <p class="tab__text">
-                泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」
-                楽しんでいただけるよう、スタッフがサポートいたします！ス<br class="u-desktop">
-                キューバダイビングを楽しむためには最低限の知識とスキルが要求
-                されます。知識やスキルと言ってもそんなに難しい事ではなく、安
-                全に楽しむ事を目的としたものです。プロダイバーの指導のもと知
-                識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
-            </div>
-            <div class="tab__image">
-              <img src="./assets/images/common/information_media_1.jpg" alt="ライセンス" decoding="async" loading="lazy"
-              width="984" height="626">
-            </div>
+    <!-- 下層 Information -->
+    <section class="layout-information page-information">
+      <div class="page-information__inner inner">
+        <div class="page-information__tab tab">
+          <div class="tab__list">
+            <button class="tab__button tab__button--whale js-tab-button is-active">ライセンス<br class="u-mobile">講習</button>
+            <button class="tab__button tab__button--shark js-tab-button">ファン<br class="u-mobile">ダイビング</button>
+            <button class="tab__button tab__button--small-fish js-tab-button">体験<br class="u-mobile">ダイビング</button>
           </div>
-          <div class="tab__content js-tab-content">
-            <div class="tab__text-block">
-              <h2 class="tab__title">ファンダイビング</h2>
-              <p class="tab__text">
-                ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
-                代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
-                イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
-                岸」等もご用意！</p>
+          <div class="tab__contents">
+            <div class="tab__content js-tab-content is-active" id="tab__content01">
+              <div class="tab__text-block">
+                <h2 class="tab__title">ライセンス講習</h2>
+                <p class="tab__text">
+                  泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」
+                  楽しんでいただけるよう、スタッフがサポートいたします！ス<br class="u-desktop">
+                  キューバダイビングを楽しむためには最低限の知識とスキルが要求
+                  されます。知識やスキルと言ってもそんなに難しい事ではなく、安
+                  全に楽しむ事を目的としたものです。プロダイバーの指導のもと知
+                  識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+              </div>
+              <div class="tab__image">
+                <img src="./assets/images/common/information_media_1.jpg" alt="ライセンス" decoding="async" loading="lazy"
+                  width="984" height="626">
+              </div>
             </div>
-            <div class="tab__image">
-              <img src="./assets/images/common/information_media_2.jpg" alt="ライセンス" decoding="async" loading="lazy"
-              width="984" height="626">
+            <div class="tab__content js-tab-content" id="tab__content03">
+              <div class="tab__text-block">
+                <h2 class="tab__title">ファンダイビング</h2>
+                <p class="tab__text">
+                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
+                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
+                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
+                  岸」等もご用意！</p>
+              </div>
+              <div class="tab__image">
+                <img src="./assets/images/common/information_media_2.jpg" alt="ライセンス" decoding="async" loading="lazy"
+                  width="984" height="626">
+              </div>
             </div>
-          </div>
-          <div class="tab__content js-tab-content">
-            <div class="tab__text-block">
-              <h2 class="tab__title">体験ダイビング</h2>
-              <p class="tab__text">
-                ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
-                代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
-                イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
-                岸」等もご用意！</p>
-            </div>
-            <div class="tab__image">
-              <img src="./assets/images/common/information_media_3.jpg" alt="体験ダイビング" decoding="async" loading="lazy"
-              width="984" height="626">
+            <div class="tab__content js-tab-content" id="tab__content02">
+              <div class="tab__text-block">
+                <h2 class="tab__title">体験ダイビング</h2>
+                <p class="tab__text">
+                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
+                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
+                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
+                  岸」等もご用意！</p>
+              </div>
+              <div class="tab__image">
+                <img src="./assets/images/common/information_media_3.jpg" alt="体験ダイビング" decoding="async" loading="lazy"
+                  width="984" height="626">
+              </div>
             </div>
           </div>
         </div>
       </div>
       </div>
-    </div>
-   </section>
+    </section>
+
     <!-- Contact -->
     <section class="layout-contact contact">
       <div class="contact__inner inner">
@@ -339,6 +342,7 @@
       </div>
     </section>
   </main>
+
   <!--フッター-->
   <footer class="layout-footer footer">
     <div class="fooer__inner inner">
