--- a/src/page-price.html
+++ b/src/page-price.html
@@ -219,6 +219,7 @@
     </div>
   </header>
   <main>
+
     <!-- 下層メインビュー -->
     <div class="sub-mv" id="js-mv">
       <div class="sub-mv__inner">
@@ -233,18 +234,20 @@
         </div>
       </div>
     </div>
+
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <div class="bredcrumb__text">パンくずリスト</div>
       </div>
     </div>
+
     <!-- 下層Price -->
     <section class="layout-price page-price">
       <div class="page-price__inner inner">
         <div class="page-price__contents">
           <!-- セクション1：ライセンス講習 -->
-          <div class="page-price__group">
+          <div class="page-price__group" id="page-price__group01">
             <div class="page-price__title">ライセンス講習</div>
             <div class="page-price__items">
               <div class="page-price__item">
@@ -262,7 +265,7 @@
             </div>
           </div>
           <!-- セクション2：体験ダイビング -->
-          <div class="page-price__group">
+          <div class="page-price__group" id="page-price__group02">
             <div class="page-price__title">体験ダイビング</div>
             <div class="page-price__items">
               <div class="page-price__item">
@@ -284,7 +287,7 @@
             </div>
           </div>
           <!-- セクション3：ファンダイビング -->
-          <div class="page-price__group">
+          <div class="page-price__group" id="page-price__group03">
             <div class="page-price__title">ファンダイビング</div>
             <div class="page-price__items">
               <div class="page-price__item">
@@ -306,7 +309,7 @@
             </div>
           </div>
           <!-- セクション4：スペシャルダイビング -->
-          <div class="page-price__group">
+          <div class="page-price__group" id="page-price__group04">
             <div class="page-price__title">スペシャルダイビング</div>
             <div class="page-price__items">
               <div class="page-price__item">
@@ -326,7 +329,6 @@
         </div>
       </div>
     </section>
-
 
     <!-- Contact -->
     <section class="layout-contact contact">
@@ -368,6 +370,7 @@
       </div>
     </section>
   </main>
+
   <!--フッター-->
   <footer class="layout-footer footer">
     <div class="fooer__inner inner">
