--- a/src/page-price.html
+++ b/src/page-price.html
@@ -39,13 +39,13 @@
 </head>
 
 <body id="top">
-  <header class="top-header header" id="js-header">
+  <header class="layout-header header" id="js-header">
     <div class="header__inner">
-      <h1 class="header__title">
+      <div class="header__title">
         <a href="index.html" class="header__logo-link">
           <img src="./assets/images/common/logo.png" decoding="async" alt="CodeUpsのロゴ" width="133" height="50">
         </a>
-      </h1>
+      </div>
       <button type="button" class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -117,13 +117,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス取得</a>
+                            <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">貸切体験ダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ナイトダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -142,13 +142,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-information.html#tab__content01">ライセンス講習</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-information.html#tab__content02">体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-information.html#tab__content03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -176,13 +176,13 @@
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
                           <li class="sp-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-price.html#page-price__group01">ライセンス講習</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-price.html#page-price__group02">体験ダイビング</a>
                           </li>
                           <li class="sp-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-price.html#page-price__group03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -248,7 +248,7 @@
         <div class="page-price__contents">
           <!-- セクション1：ライセンス講習 -->
           <div class="page-price__group" id="page-price__group01">
-            <div class="page-price__title">ライセンス講習</div>
+            <h2 class="page-price__title">ライセンス講習</h2>
             <div class="page-price__items">
               <div class="page-price__item">
                 <span class="page-price__list">オープンウォーター<br class="u-mobile">ダイバーコース</span>
@@ -266,7 +266,7 @@
           </div>
           <!-- セクション2：体験ダイビング -->
           <div class="page-price__group" id="page-price__group02">
-            <div class="page-price__title">体験ダイビング</div>
+            <h2 class="page-price__title">体験ダイビング</h2>
             <div class="page-price__items">
               <div class="page-price__item">
                 <span class="page-price__list">ビーチ体験ダイビング<br class="u-mobile">(半日)</span>
@@ -288,7 +288,7 @@
           </div>
           <!-- セクション3：ファンダイビング -->
           <div class="page-price__group" id="page-price__group03">
-            <div class="page-price__title">ファンダイビング</div>
+            <h2 class="page-price__title">ファンダイビング</h2>
             <div class="page-price__items">
               <div class="page-price__item">
                 <span class="page-price__list">ビーチダイビング<br class="u-mobile">(2ダイブ)</span>
@@ -310,7 +310,7 @@
           </div>
           <!-- セクション4：スペシャルダイビング -->
           <div class="page-price__group" id="page-price__group04">
-            <div class="page-price__title">スペシャルダイビング</div>
+            <h2 class="page-price__title">スペシャルダイビング</h2>
             <div class="page-price__items">
               <div class="page-price__item">
                 <span class="page-price__list">貸切ダイビング<br class="u-mobile">(2ダイブ)</span>
@@ -363,7 +363,7 @@
             </div>
             <div class="contact__column-text">ご予約・お問い合わせはコチラ</div>
             <div class="contact__column-btn">
-              <a href="#" class="button slide"><span>Contact us</span></a>
+              <a href="page-contact.html" class="button slide"><span>Contact us</span></a>
             </div>
           </div>
         </div>
@@ -376,7 +376,7 @@
     <div class="fooer__inner inner">
       <div class="footer__wrapper">
         <div class="footer__container">
-          <a href="#" class="footer__logo-link">
+          <a href="index.html" class="footer__logo-link">
             <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
           </a>
           <div class="footer__icon-list">
@@ -396,50 +396,50 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">キャンペーン</a>
+                        <a href="page-campaign.html">キャンペーン</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス取得</a>
+                            <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">貸切体験ダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ナイトダイビング</a>
+                            <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                           </li>
                         </ul>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">私たちについて</a>
+                        <a href="page-about.html">私たちについて</a>
                       </li>
                     </ul>
                   </div>
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">ダイビング情報</a>
+                        <a href="page-information.html">ダイビング情報</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-information.html#tab__content01">ライセンス講習</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-information.html#tab__content02">体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-information.html#tab__content03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">ブログ</a>
+                        <a href="page-blog.html">ブログ</a>
                       </li>
                     </ul>
                   </div>
@@ -450,23 +450,23 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">お客様の声</a>
+                        <a href="page-voice.html">お客様の声</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">料金一覧</a>
+                        <a href="page-price.html">料金一覧</a>
                       </li>
                       <li class="footer-nav__body">
                         <ul class="footer-nav__lists">
                           <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
+                            <a href="page-price.html#page-price__group01">ライセンス講習</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
+                            <a href="page-price.html#page-price__group02">体験ダイビング</a>
                           </li>
                           <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
+                            <a href="page-price.html#page-price__group03">ファンダイビング</a>
                           </li>
                         </ul>
                       </li>
@@ -475,22 +475,22 @@
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">よくある質問</a>
+                        <a href="page-faq.html">よくある質問</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">利用規約</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="#">お問い合わせ</a>
+                        <a href="page-contact.html">お問い合わせ</a>
                       </li>
                     </ul>
                   </div>
