--- a/src/page-404.html
+++ b/src/page-404.html
@@ -40,13 +40,13 @@
 
 <body id="top">
   <div class="layout-container layout-container--color">
-    <header class="top-header header" id="js-header">
+    <header class="layout-header header" id="js-header">
       <div class="header__inner">
-        <h1 class="header__title">
+        <div class="header__title">
           <a href="index.html" class="header__logo-link">
             <img src="./assets/images/common/logo.png" decoding="async" alt="CodeUpsのロゴ" width="133" height="50">
           </a>
-        </h1>
+        </div>
         <button type="button" class="header__drawer hamburger js-hamburger">
           <span></span>
           <span></span>
@@ -118,13 +118,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -143,13 +143,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -177,13 +177,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -219,168 +219,168 @@
         </nav>
       </div>
     </header>
-  <main>
-    <!-- 下層メインビュー -->
-    <div class="sub-mv" id="js-mv">
-      <div class="sub-mv__inner">
-        <div class="sub-mv__image sub-mv__image--height">
-        </div>
-      </div>
-    </div>
-    <!-- パンくず -->
-    <div class="page-bredcrumb bredcrumb">
-      <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text bredcrumb__text--color">パンくずリスト</div>
-      </div>
-    </div>
-    <!-- 下層404-->
-     <div class="layout-404 page-404">
-      <div class="page-404__inner inner">
-        <div class="page-404__container">
-        <h2 class="page-404__heading">404</h2>
-        <p class="page-404__text">申し訳ありません。<br>お探しのページが見つかりません。</p>
-        <div class="page-404__button">
-          <a href="#" class="button slide button--design"><span>Page TOP</span></a>
-        </div>
-      </div>
-      </div>
-     </div>
-  </main>
-  <!--フッター-->
-  <footer class="page-404-footer footer">
-    <div class="fooer__inner inner">
-      <div class="footer__wrapper">
-        <div class="footer__container">
-          <a href="#" class="footer__logo-link">
-            <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
-          </a>
-          <div class="footer__icon-list">
-            <a href="#" class="footer__icon-item">
-              <img src="./assets/images/common/FacebookLogo.svg" alt="facebookのロゴ" decoding="async" loading="lazy">
-            </a>
-            <a href="#" class="footer__icon-item">
-              <img src="./assets/images/common/InstagramLogo.svg" alt="instagramのロゴ" decoding="async" loading="lazy">
-            </a>
+    <main>
+      <!-- 下層メインビュー -->
+      <div class="sub-mv" id="js-mv">
+        <div class="sub-mv__inner">
+          <div class="sub-mv__image sub-mv__image--height">
           </div>
         </div>
-        <nav class="footer__nav">
-          <div class="footer-nav">
-            <div class="footer-nav__contents">
-              <div class="footer-nav__container">
-                <div class="footer-nav__flex">
-                  <div class="footer-nav__group">
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">キャンペーン</a>
-                      </li>
-                      <li class="footer-nav__body">
-                        <ul class="footer-nav__lists">
-                          <li class="footer-nav__list">
-                            <a href="#">ライセンス取得</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">貸切体験ダイビング</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">ナイトダイビング</a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">私たちについて</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="footer-nav__group">
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">ダイビング情報</a>
-                      </li>
-                      <li class="footer-nav__body">
-                        <ul class="footer-nav__lists">
-                          <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">ブログ</a>
-                      </li>
-                    </ul>
+      </div>
+      <!-- パンくず -->
+      <div class="page-bredcrumb bredcrumb">
+        <div class="bredcrumb__inner inner">
+          <div class="bredcrumb__text bredcrumb__text--color">パンくずリスト</div>
+        </div>
+      </div>
+      <!-- 下層404-->
+      <div class="layout-404 page-404">
+        <div class="page-404__inner inner">
+          <div class="page-404__container">
+            <h1 class="page-404__heading">404</h1>
+            <p class="page-404__text">申し訳ありません。<br>お探しのページが見つかりません。</p>
+            <div class="page-404__button">
+              <a href="index.html" class="button slide button--design"><span>Page TOP</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!--フッター-->
+    <footer class="page-404-footer footer">
+      <div class="fooer__inner inner">
+        <div class="footer__wrapper">
+          <div class="footer__container">
+            <a href="index.html" class="footer__logo-link">
+              <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
+            </a>
+            <div class="footer__icon-list">
+              <a href="#" class="footer__icon-item">
+                <img src="./assets/images/common/FacebookLogo.svg" alt="facebookのロゴ" decoding="async" loading="lazy">
+              </a>
+              <a href="#" class="footer__icon-item">
+                <img src="./assets/images/common/InstagramLogo.svg" alt="instagramのロゴ" decoding="async" loading="lazy">
+              </a>
+            </div>
+          </div>
+          <nav class="footer__nav">
+            <div class="footer-nav">
+              <div class="footer-nav__contents">
+                <div class="footer-nav__container">
+                  <div class="footer-nav__flex">
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-campaign.html">キャンペーン</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list">
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-about.html">私たちについて</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-information.html">ダイビング情報</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list">
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-blog.html">ブログ</a>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="footer-nav__container">
-                <div class="footer-nav__flex">
-                  <div class="footer-nav__group">
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">お客様の声</a>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">料金一覧</a>
-                      </li>
-                      <li class="footer-nav__body">
-                        <ul class="footer-nav__lists">
-                          <li class="footer-nav__list">
-                            <a href="#">ライセンス講習</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">体験ダイビング</a>
-                          </li>
-                          <li class="footer-nav__list">
-                            <a href="#">ファンダイビング</a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="footer-nav__group">
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">よくある質問</a>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">利用規約</a>
-                      </li>
-                    </ul>
-                    <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title ">
-                        <a href="#">お問い合わせ</a>
-                      </li>
-                    </ul>
+                <div class="footer-nav__container">
+                  <div class="footer-nav__flex">
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-voice.html">お客様の声</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-price.html">料金一覧</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list">
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list">
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-faq.html">よくある質問</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-terms.html">利用規約</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-contact.html">お問い合わせ</a>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </nav>
+          </nav>
+        </div>
       </div>
-    </div>
-    <div class="footer__copyright">
-      <small>Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
-    </div>
-  </footer>
+      <div class="footer__copyright">
+        <small>Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
+      </div>
+    </footer>
+  </div>
 </body>
-</div>
 
 </html>
