--- a/src/page-privacypolicy.html
+++ b/src/page-privacypolicy.html
@@ -40,13 +40,13 @@
 
 <body id="top">
   <div class="layout-container">
-    <header class="top-header header" id="js-header">
+    <header class="layout-header header" id="js-header">
       <div class="header__inner">
-        <h1 class="header__title">
+        <div class="header__title">
           <a href="index.html" class="header__logo-link">
             <img src="./assets/images/common/logo.png" decoding="async" alt="CodeUpsのロゴ" width="133" height="50">
           </a>
-        </h1>
+        </div>
         <button type="button" class="header__drawer hamburger js-hamburger">
           <span></span>
           <span></span>
@@ -118,13 +118,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -143,13 +143,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -177,13 +177,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -252,7 +252,7 @@
               <div class="page-privacy__top-group">
                 <p class="page-privacy__top-lead">以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。</p>
                 <ol class="page-privacy__top-text-group" type="1">
-                  <li class="page-privacy__top-text">概要
+                  <li class="page-privacy__top-text">概要</li>
                     当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。</ぃ>
                   <li class="page-privacy__top-text">収集する情報
                     当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。</li>
@@ -323,19 +323,20 @@
               </div>
               <div class="contact__column-text">ご予約・お問い合わせはコチラ</div>
               <div class="contact__column-btn">
-                <a href="#" class="button slide"><span>Contact us</span></a>
+                <a href="page-contact.html" class="button slide"><span>Contact us</span></a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
+
     <!--フッター-->
-    <footer class="sitemap-footer footer">
+    <footer class="layout-footer footer">
       <div class="fooer__inner inner">
         <div class="footer__wrapper">
           <div class="footer__container">
-            <a href="#" class="footer__logo-link">
+            <a href="index.html" class="footer__logo-link">
               <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
             </a>
             <div class="footer__icon-list">
@@ -354,51 +355,51 @@
                   <div class="footer-nav__flex">
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">キャンペーン</a>
+                        <li class="footer-nav__title">
+                          <a href="page-campaign.html">キャンペーン</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">私たちについて</a>
+                        <li class="footer-nav__title">
+                          <a href="page-about.html">私たちについて</a>
                         </li>
                       </ul>
                     </div>
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">ダイビング情報</a>
+                        <li class="footer-nav__title">
+                          <a href="page-information.html">ダイビング情報</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">ブログ</a>
+                        <li class="footer-nav__title">
+                          <a href="page-blog.html">ブログ</a>
                         </li>
                       </ul>
                     </div>
@@ -408,24 +409,24 @@
                   <div class="footer-nav__flex">
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">お客様の声</a>
+                        <li class="footer-nav__title">
+                          <a href="page-voice.html">お客様の声</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">料金一覧</a>
+                        <li class="footer-nav__title">
+                          <a href="page-price.html">料金一覧</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -433,23 +434,23 @@
                     </div>
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">よくある質問</a>
+                        <li class="footer-nav__title">
+                          <a href="page-faq.html">よくある質問</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <li class="footer-nav__title">
+                          <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">利用規約</a>
+                        <li class="footer-nav__title">
+                          <a href="page-terms.html">利用規約</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">お問い合わせ</a>
+                        <li class="footer-nav__title">
+                          <a href="page-contact.html">お問い合わせ</a>
                         </li>
                       </ul>
                     </div>
@@ -465,7 +466,7 @@
       </div>
     </footer>
     <a href="#top" class="page-top-button js-page-top" aria-label="ページトップに移動する"></a>
+  </div>
 </body>
-</div>
 
 </html>
