--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -40,7 +40,7 @@
 
 <body id="top">
   <div class="layout-container">
-    <header class="top-header header" id="js-header">
+    <header class="layout-header header" id="js-header">
       <div class="header__inner">
         <h1 class="header__title">
           <a href="index.html" class="header__logo-link">
@@ -118,13 +118,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -143,13 +143,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -177,13 +177,13 @@
                         <li class="sp-nav__body">
                           <ul class="sp-nav__lists">
                             <li class="sp-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="sp-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -262,7 +262,7 @@
       <div class="fooer__inner inner">
         <div class="footer__wrapper">
           <div class="footer__container">
-            <a href="#" class="footer__logo-link">
+            <a href="index.html" class="footer__logo-link">
               <img src="./assets/images/common/footer-logo.svg" alt="CodeUps" decoding="async" loading="lazy">
             </a>
             <div class="footer__icon-list">
@@ -282,50 +282,50 @@
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">キャンペーン</a>
+                          <a href="page-campaign.html">キャンペーン</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">私たちについて</a>
+                          <a href="page-about.html">私たちについて</a>
                         </li>
                       </ul>
                     </div>
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">ダイビング情報</a>
+                          <a href="page-information.html">ダイビング情報</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">ブログ</a>
+                          <a href="page-blog.html">ブログ</a>
                         </li>
                       </ul>
                     </div>
@@ -336,23 +336,23 @@
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">お客様の声</a>
+                          <a href="page-voice.html">お客様の声</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">料金一覧</a>
+                          <a href="page-price.html">料金一覧</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -361,22 +361,22 @@
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">よくある質問</a>
+                          <a href="page-faq.html">よくある質問</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                          <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">利用規約</a>
+                          <a href="page-terms.html">利用規約</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
-                          <a href="#">お問い合わせ</a>
+                          <a href="page-contact.html">お問い合わせ</a>
                         </li>
                       </ul>
                     </div>
